--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,26 +4,26 @@ services:
   apache:
     build: ./apache
     ports: 
-      - 8181:80
+      - 80:80
     volumes:
       - ./src:/var/www/html
 
   mysql:
-    image: mysql
+    image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     ports:
       - 3306:3306
     environment: 
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=lamp_db
-      - MYSQL_USER=lamp_user
-      - MYSQL_PASSWORD=lamp_password
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
       - ./db:/docker-entrypoint-initdb.d       
 
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin:5
     ports:
       - 8080:80
     environment:
