--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
   apache:
     build: ./apache
     ports: 
-      - 8181:80
+      - 80:80
     volumes:
       - ./src:/var/www/html
 
   mysql:
-    image: mysql
+    image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     ports:
       - 3306:3306
@@ -23,7 +23,7 @@ services:
       - ./db:/docker-entrypoint-initdb.d       
 
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin
     ports:
       - 8080:80
     environment:
